@@ -1,6 +1,7 @@
 procps-3.2.5 --> procps-3.2.6
 
 more MIPS crud  -- thanks Jim Gifford and Ryan Oliver
+begin prep for setuid
 
 procps-3.2.4 --> procps-3.2.5
 
